# Remote-infrared-thermometer-

./: LICENSE  README.md
Application/: CMakeLists.txt  README.md  Thermal_imageing.py  main.cpp
Prototype Test/: a.txt
PrototypeTest/: FinalCode.cpp  facial_recognition_test.cpp
PrototypeTest/AMG8833_Test/: README.md  amg8833_test.py  amg8833_test_simple.py
PrototypeTest/Buzzer&Led Test/: Buzzer_singing.py  Buzzer_test.cpp
PrototypeTest/Buzzer_test/: Buzzer_test.py  Led_test.cpp  README.md
PrototypeTest/Face detection/: CMakeLists.txt  CmakeCache.txt  README.md  cmake_install.cmake  facial_recognition_test.cpp  finalCode.cpp  readVideo.cpp
PrototypeTest/FinalCode/: RIT.cpp
PrototypeTest/LED Test/: Led.cpp  add_wiringPi.md
